[package]
name = "location2gpx"
version = "0.1.0"
edition = "2021"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
description = "GPX file generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argopt = { version = "0.3.0", optional = true }
geo = "0.23.1"
gpx = "0.8.6"
mongodb = { version = "2.3.1", optional = true, features = ["tokio-sync"] }
time = { version = "0.3.19", features = ["macros"] }

[features]
default = ["cli", "mongo"]
cli = ["dep:argopt"]
mongo = ["dep:mongodb"]

[[bin]]
name = "location2gpx"
required-features = ["cli"]

[lib]
name = "location2gpx"
crate-type = ["lib"]
