[package]
name = "location2gpx"
version = "0.1.0"
edition = "2021"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
description = "GPX file generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argopt = { version = "0.3.0", optional = true }
geo = "0.24"
gpx = "0.8.6"
mongodb = { version = "2.3.1", optional = true, features = ["tokio-sync"] }
bson = { version = "2.5.0", optional = true, features = ["time-0_3"] }
time = { version = "0.3.19", features = ["macros"] }
csv = { version = "1.2.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
dirs = { version = "5.0.0", optional = true }

[features]
default = ["cli", "mongo", "csv"]
cli = ["dep:argopt", "dep:dirs"]
mongo = ["dep:mongodb", "dep:bson"]
csv = ["dep:csv"]

[[bin]]
name = "location2gpx"
required-features = ["cli"]

[lib]
name = "location2gpx"
crate-type = ["lib"]
